# noise-c

./: .gitignore  CMakeLists.txt  build.bat  configure~  env.bat  noise-c.vcxproj
examples/: CMakeLists.txt
examples/echo/echo-client/: echo-client.c  echo-client.c.org
src/: CMakeLists.txt
src/protocol/: dhstate.c
